# TinySTL

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp
src/: iterator.h  type_traits.h  utility.h
